Fix broken alignment of post and comment footers

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -460,6 +460,10 @@ code {
     grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
+.post-footer.post-not-owned>.post-footer-buttons {
+    grid-template-columns: 1fr 1fr;
+}
+
 .post-footer-item {
     background: none;
     border-radius: 0;
